adjusted spacing issues

--- a/_sass/pages/_articles.scss
+++ b/_sass/pages/_articles.scss
@@ -57,7 +57,11 @@ ____________________________________________________________________
     width: 2px;
   }
 }
+.History h4 {
+  line-height:4.5;
+  width:55px;
 
+}
 .date, .History h4 {
   position: absolute;
   left: 14%;
